# finalized_project

./: .replit  README.md  app.py  data_processing.py  pyproject.toml
static/all_json_files/: PES188858-data-baseline 1.json  json2_1.json  json3 1.json  json4 1.json  json5 1.json
templates/: base.html  baseline_analysis.html  home.html  jobitem.html  plot.html  stepwise_analysis.html
