[tool.poetry]
name = "repl-nix-finalizedproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_finalizedproject"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
matplotlib = "^3.9.1"
numpy = "^2.0.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
